02-kustomize/overlays/staging/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: hello
          image: registry.gitlab.com/gitops-heros/sith:1.0
