02-kustomize/overlays/staging/ingress.yml
# ----- Ingress -----
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello
  annotations:
    link.argocd.argoproj.io/external-link: http://staging.192.168.49.10.sslip.io
spec:
  routes:
  - match: Host(`staging.192.168.49.10.sslip.io`)
    kind: Rule
    services:
    - name: hello
      port: 80
